--- a/Documentation/Languages/zhCN.xaml
+++ b/Documentation/Languages/zhCN.xaml
@@ -627,6 +627,8 @@
         Test |
         Zombie |
         Metamorphosis |
+		Unknown 1 |
+		Unknown 2 |
         Undead |
         Master Angler |
         Flight (Epic) |
