--- a/SpellGUIV2/ImportExportWindow.xaml
+++ b/SpellGUIV2/ImportExportWindow.xaml
@@ -24,6 +24,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="AUTO"/>
                         <ColumnDefinition Width="AUTO"/>
+                        <ColumnDefinition Width="AUTO"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="AUTO"/>
@@ -34,6 +35,7 @@
                     </Grid.RowDefinitions>
                     <Label Content="The required DBCs are checked by default." Margin="10" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"/>
                     <Button Content="Import Checked DBC Files" Margin="10" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Click="ImportClick"/>
+                    <ComboBox Name="ImportTypeCombo" Margin="5" Grid.Row="1" Grid.Column="2"/>
                     <ScrollViewer Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="500">
                         <UniformGrid Name="ImportGridDbcs" Columns="1"/>
                     </ScrollViewer>
@@ -42,6 +44,7 @@
             <TabItem Header="{DynamicResource butImportExportWindowExport}">
                 <Grid Name="ExportGrid" Margin="5">
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="AUTO"/>
                         <ColumnDefinition Width="AUTO"/>
                         <ColumnDefinition Width="AUTO"/>
                     </Grid.ColumnDefinitions>
@@ -57,6 +60,7 @@
                     <Label Content="{DynamicResource ExportMpqName}" HorizontalAlignment="Right" Margin="5" Grid.Row="1" Grid.Column="0"/>
                     <TextBox Name="ExportMpqNameTxt" Text="patch-4.mpq" Margin="10,5,10,5" Grid.Row="1" Grid.Column="1"/>
                     <Label Content="{DynamicResource TablesToExport}" Margin="5" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"/>
+                    <ComboBox Name="ExportTypeCombo" Margin="5" Grid.Row="1" Grid.Column="2"/>
                     <ScrollViewer Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" MinWidth="500">
                         <UniformGrid Name="ExportGridDbcs" Columns="1"/>
                     </ScrollViewer>
