--- a/Documentation/Languages/frFR.xaml
+++ b/Documentation/Languages/frFR.xaml
@@ -9,6 +9,8 @@
     <system:String x:Key="labFilterBtName">Filtrer par nom :</system:String>
 	<system:String x:Key="labFilterByEffect">Filter by spell effect :</system:String>
 	<system:String x:Key="labFilterByAura">Filter by spell aura:</system:String>
+	<system:String x:Key="labFilterByTargetA">Filter by Target A:</system:String>
+	<system:String x:Key="labFilterByTargetB">Filter by Target B:</system:String>
     <system:String x:Key="tabEnglish">Anglais</system:String>
     <system:String x:Key="tabKorean">Coréen</system:String>
     <system:String x:Key="tabFrench">Français</system:String>
